--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div id="collapsable-nav" class="collapse navbar-collapse">
           <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li><a href="menu-categories.html"><span class="visible-xs">Chicken</span></a></li>
+            <li><a href="#"><span class="visible-xs">Chicken</span></a></li>
             <li><a href="#"><span class="visible-xs">Beef</span></a></li>
             <li><a href="#"><span class="visible-xs">Sushi</span></a></li>
           </ul><!-- #nav-list -->
